packages/taquito-michel-codec/test/contracts_013/ill_typed/stack_bottom_undip2able.tz
parameter unit;
storage unit;
code {
       DUP;
       DIP 2 { DUP };
     }
